--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,11 +5,12 @@
   },
   "forwardPorts": [8000],
   "postCreateCommand": "pip install -r requirements.txt",
-  "settings": {
-    "python.pythonPath": "/usr/local/bin/python"
-  },
-  "extensions": [
-    "ms-python.python",
-    "ms-python.vscode-pylance"
-  ]
+  "customizations": {
+    "vscode": {
+      "extensions": ["ms-python.python", "ms-python.vscode-pylance", "ms-azuretools.vscode-docker", "rtg.py-snippets"],
+      "settings": {
+        "python.pythonPath": "/usr/local/bin/python"
+      }
+    }
+  }
 }
