--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,20 @@
 {
-  "name": "FastAPI Dev Container",
-  "build": {
-    "dockerfile": "Dockerfile"
-  },
-  "forwardPorts": [8000],
+  "name": "Python 3 + FastAPI + MongoDB devcontainer",
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "dev",
+  "workspaceFolder": "/workspace",
+  "forwardPorts": [8000, 27017],
   "postCreateCommand": "pip install -r requirements.txt",
   "customizations": {
     "vscode": {
-      "extensions": ["ms-python.python", "ms-python.vscode-pylance", "ms-azuretools.vscode-docker", "rtg.py-snippets"],
-      "settings": {
-        "python.pythonPath": "/usr/local/bin/python"
-      }
+      "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "mongodb.mongodb-vscode"
+      ]
     }
   }
 }
+
+
+
